Modify hero section title and subtitle
Updated the hero section title and subtitle.

--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@
 
         <section class="products-section glass-card">
             <div class="section-header">
-                <h2 class="neon-text">Productos Disponibles</h2>
-                <p class="section-subtitle">Explora nuestra selección artesanal</p>
+                <h2 class="neon-text">Todos los Productos</h2>
+                <p class="section-subtitle">Catálogo completo de nuestra selección artesanal</p>
             </div>
             <div class="products-grid" id="randomProducts"></div>
         </section>
